--- a/package.json
+++ b/package.json
@@ -34,5 +34,15 @@
     "react-addons-linked-state-mixin": "^0.14.8",
     "react-dom": "^0.14.2",
     "react-router": "^2.0.1"
-  }
+  },
+  "engines": {
+  "node": "5.6.0", 
+  "npm": "3.6.0"
+  },
+
+  "scripts": {
+    "postinstall": "./node_modules/.bin/webpack"
+  },
+
+
 }
