--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^0.14.2",
     "react-addons-linked-state-mixin": "^0.14.8",
     "react-dom": "^0.14.2",
+    "react-joyride": "^1.3.6",
     "react-router": "^2.0.1"
   },
   "engines": {
